chromaimagegen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: chromaimagegen
  name: chromaimagegen
  namespace: chromaimagegen
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: chromaimagegen
  strategy:
    type: Recreate # We don't want to do rolling updates because we make use of the GPU. if you have extra hardware then go nuts.
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chromaimagegen
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: America/Vancouver
          # https://github.com/ryanbeales/chromaimagegen/pkgs/container/chromaimagegen
          image: 'ghcr.io/ryanbeales/chromaimagegen:sha-e08be49'
          imagePullPolicy: IfNotPresent
          name: chromaimagegen
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8000
            failureThreshold: 10 
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              nvidia.com/gpu: '1'
            runtimeClassName: nvidia # Use the NVIDIA runtime.
          volumeMounts:
            - mountPath: /model_cache
              name: model-cache
            - mountPath: /image_dir
              name: image-dir
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: crobputer # There's a decent video card in here that we want to use.
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: model-cache-pvc
        - name: image-dir
          persistentVolumeClaim:
            claimName: image-dir-pvc
