chromaimagegen/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
  labels:
    app.kubernetes.io/name: chromaimagegen
  name: chromaimagegen
  namespace: chromaimagegen
spec:
  ingressClassName: nginx
  rules:
    - host: chromaimagegen.crobasaurusrex.ryanbeales.com
      http:
        paths:
          - backend:
              service:
                name: chromaimagegen
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - chromaimagegen.crobasaurusrex.ryanbeales.com
      secretName: chromaimagegen-crobasaurusrex-ryanbeales-com-tls
